# actix_full

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
backend/: Cargo.toml  README.md  docker-compose.yml
backend/.sqlx/: query-414f2e48011881bac115d77cbac1175abaa1fc3f42a1ddf815c09cdfc3d583f9.json  query-56e2fb814a08c8dab36b209a8990d01d5915c0393a33b6e908016712008ec53b.json  query-ad01a224364a406d86d8fb6378e70f9abc8ab9a073d63e150a49591987f1df82.json  query-d2159e74439fbd18c620b1a2b415fc4643c94c8f22b04b01a1b1a90bf61e8720.json  query-f7a1c1058f08810f4a908a6cc389061795e71a07dd4f88ca68ab06abc47b2c82.json
backend/migrations/: 20230907201912_init.down.sql  20230907201912_init.up.sql
backend/src/: actor.rs  config.rs  crypto.rs  handler.rs  main.rs  model.rs  schema.rs  user.rs
backend/src/.config/: Settings.toml
backend/src/extractors/: auth_token.rs  jwt_auth.rs
backend/src/scopes/: admin.rs  api_consult.rs  api_engagement.rs  message.rs  mod.rs  user.rs
backend/src/tests/: index_test.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  main.css  main.rs  router.rs  store.rs
frontend/src/components/: alert.rs  attachments_display.rs  button.rs  clients_display.rs  clients_form.rs  consultants_display.rs  consults_display.rs  consults_form.rs  date_input.rs  email_input.rs  engagement_form.rs  engagement_item.rs  engagement_list.rs  engagement_stats.rs  home_card.rs  location_select.rs  login_form.rs  logout.rs  matched_icon.rs  mod.rs  nav.rs  refresh_token.rs  register_form.rs  select_input.rs  spinner.rs  text_input.rs  time_input.rs  user_menu.rs  user_profile_display.rs
frontend/src/components/auth/: login_form.rs  matched_icon.rs  mod.rs  refresh_token.rs  register_form.rs
frontend/src/components/clients/: clients_display.rs  clients_form.rs  clients_table.rs  edit_modal.rs  mod.rs
frontend/src/components/consultants/: consultants_display.rs  consultants_form.rs  consultants_table.rs  edit_modal.rs  mod.rs
frontend/src/components/consults/: consults_display.rs  consults_form.rs  consults_table.rs  edit_modal.rs  mod.rs  view_modal.rs
frontend/src/components/engagements/: engagement_form.rs  engagement_item.rs  engagement_stats.rs  mod.rs
frontend/src/components/inputs/: date_input.rs  email_input.rs  mod.rs  required_text_input.rs  select_input.rs  text_input.rs  textarea_input.rs  time_input.rs
frontend/src/components/pages/: clients.rs  consultants.rs  consults.rs  engagements.rs  home.rs  inquire.rs  login.rs  mod.rs  register.rs  user_profile.rs
