[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = { version = "0.4.30", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
common = { version = "0.1.0", path = "../common" }
dotenvy_macro = "0.15.7"
jsonwebtoken = "8.3.0"
actix-multipart = "0.6.1"
futures-util = "0.3.28"
mime = "0.3.17"
image = "0.24.7"
tokio = { version = "1.32.0", features = ["fs"] }
redis = "0.23.3"
argonautica = "0.2.0"
actix-web-httpauth = "0.8.1"
hmac = "0.12.1"
sha2 = "0.10.7"
config = "0.13.3"
actix-session = { version = "0.8.0", features = ["redis-rs-tls-session"] }
tracing = { version = "0.1.37", features = ["log"] }
validator = { version = "0.16.1", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.9.5"
