[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "js"] }
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.30", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["postgres", "chrono"] }
serde_with = "3.3.0"
