[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
reqwasm = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
chrono = { version = "0.4.30", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "js"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "Window"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"
common = { version = "0.1.0", path = "../common" }
stylist = { version = "0.12.1", features = ["yew", "parser"] }
yew-router = "0.17.0"
gloo-console = "0.3.0"
yew_styles = { version = "0.11.0", features = ["modal"] }
